Disable loading of images in data documents on the document level, not on the node level.  Bug 251354, r=sicking, sr=peterv, a=asa