content/base/src/nsDataDocumentContentPolicy.cpp
@@ -1,0 +1,94 @@
+/* -*- Mode: C++; tab-width: 2; indent-tabs-mode: nil; c-basic-offset: 2 -*- */
+/* ***** BEGIN LICENSE BLOCK *****
+ * Version: MPL 1.1/GPL 2.0/LGPL 2.1
+ *
+ * The contents of this file are subject to the Mozilla Public License Version
+ * 1.1 (the "License"); you may not use this file except in compliance with
+ * the License. You may obtain a copy of the License at
+ * http://www.mozilla.org/MPL/
+ *
+ * Software distributed under the License is distributed on an "AS IS" basis,
+ * WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
+ * for the specific language governing rights and limitations under the
+ * License.
+ *
+ * The Original Code is mozilla.org code.
+ *
+ * The Initial Developer of the Original Code is
+ * Boris Zbarsky <bzbarsky@mit.edu>.
+ * Portions created by the Initial Developer are Copyright (C) 2004
+ * the Initial Developer. All Rights Reserved.
+ *
+ * Contributor(s):
+ *
+ * Alternatively, the contents of this file may be used under the terms of
+ * either of the GNU General Public License Version 2 or later (the "GPL"),
+ * or the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
+ * in which case the provisions of the GPL or the LGPL are applicable instead
+ * of those above. If you wish to allow use of your version of this file only
+ * under the terms of either the GPL or the LGPL, and not to allow others to
+ * use your version of this file under the terms of the MPL, indicate your
+ * decision by deleting the provisions above and replace them with the notice
+ * and other provisions required by the GPL or the LGPL. If you do not delete
+ * the provisions above, a recipient may use your version of this file under
+ * the terms of any one of the MPL, the GPL or the LGPL.
+ *
+ * ***** END LICENSE BLOCK ***** */
+
+#include "nsDataDocumentContentPolicy.h"
+#include "nsIDocument.h"
+#include "nsIContent.h"
+#include "nsIDOMWindow.h"
+#include "nsIDOMDocument.h"
+
+NS_IMPL_ISUPPORTS1(nsDataDocumentContentPolicy, nsIContentPolicy)
+
+NS_IMETHODIMP
+nsDataDocumentContentPolicy::ShouldLoad(PRUint32 aContentType,
+                                        nsIURI *aContentLocation,
+                                        nsIURI *aRequestingLocation,
+                                        nsISupports *aRequestingContext,
+                                        const nsACString &aMimeGuess,
+                                        nsISupports *aExtra,
+                                        PRInt16 *aDecision)
+{
+  *aDecision = nsIContentPolicy::ACCEPT;
+  if (aContentType == nsIContentPolicy::TYPE_IMAGE ||
+      aContentType == nsIContentPolicy::TYPE_STYLESHEET ||
+      aContentType == nsIContentPolicy::TYPE_SCRIPT) {
+    // Look for the document.  In most cases, aRequestingContext is a
+    // content node.
+    nsCOMPtr<nsIDocument> doc;
+    nsCOMPtr<nsIContent> content = do_QueryInterface(aRequestingContext);
+    if (content) {
+      doc = content->GetOwnerDoc();
+    } else {
+      doc = do_QueryInterface(aRequestingContext);
+      if (!doc) {
+        nsCOMPtr<nsIDOMWindow> window = do_QueryInterface(aRequestingContext);
+        if (window) {
+          nsCOMPtr<nsIDOMDocument> domDoc;
+          window->GetDocument(getter_AddRefs(domDoc));
+          doc = do_QueryInterface(domDoc);
+        }
+      }
+    }
+    if (doc && doc->IsLoadedAsData()) {
+      *aDecision = nsIContentPolicy::REJECT_TYPE;
+    }
+  }
+  return NS_OK;
+}
+
+NS_IMETHODIMP
+nsDataDocumentContentPolicy::ShouldProcess(PRUint32 aContentType,
+                                           nsIURI *aContentLocation,
+                                           nsIURI *aRequestingLocation,
+                                           nsISupports *aRequestingContext,
+                                           const nsACString &aMimeGuess,
+                                           nsISupports *aExtra,
+                                           PRInt16 *aDecision)
+{
+  return ShouldLoad(aContentType, aContentLocation, aRequestingLocation,
+                    aRequestingContext, aMimeGuess, aExtra, aDecision);
+}
